objects/ContractLineItem__c.object
<CustomObject>
    <description>SFDC1-2298; A custom object for contract billing schedule
SFDC1-10060 change data type from Percentage(16, 0) to Percentage(3, 2)</description>
    <fields>
        <fullName>AnnualizedDiscountAmount__c</fullName>
        <description>SFDC1-7082 Annualized discount amount to be copied over from discount amount</description>
        <inlineHelpText>Annualized discount amount auto calculated by system</inlineHelpText>
        <label>Annualized Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualizedTotalAmount__c</fullName>
        <description>SFDC1-7082 Annualized Total Amount calculated field</description>
        <formula>(( AnnualizedUnitPrice__c - AnnualizedDiscountAmount__c )* Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates total amount using AnnualizedUnitPrice , AnnualizedDiscountAmount and Quantity</inlineHelpText>
        <label>Annualized Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualizedUnitPrice__c</fullName>
        <description>SFDC1-7082 annualized unit price for subscription products</description>
        <inlineHelpText>Annualized unit price calculated from unit price automatically</inlineHelpText>
        <label>Annualized Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AssetName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2298;Look up field for Assest</description>
        <label>Asset Name</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssociatedProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-4324 This field holds the product associated with &apos;Opportunity Line Item&apos;, to which contract line item is related.</description>
        <inlineHelpText>Product related to Opportunity Line Item</inlineHelpText>
        <label>Associated Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Line Items (Associated Product)</relationshipLabel>
        <relationshipName>ContractLineItems1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuthorizedUsers__c</fullName>
        <description>SFDC1-2252 This field will have information related to Authorized users</description>
        <label>Authorized Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPeriods__c</fullName>
        <description>SFDC1-7471 This field holds the Billing Period</description>
        <inlineHelpText>Please enter the Billing Period</inlineHelpText>
        <label>Billing Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingScheduleTotal__c</fullName>
        <description>SFDC1-9599: Sum of all Billing Schedule Line items</description>
        <inlineHelpText>Sum of all Billing Schedule Line items</inlineHelpText>
        <label>Billing Schedule Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingScheduleType__c</fullName>
        <description>SFDC-7471 This field holds the Billing Schedule Type</description>
        <inlineHelpText>Please select the Billing Schedule Type</inlineHelpText>
        <label>Billing Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Milestone</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-annual</fullName>
                </value>
                <value>
                    <fullName>T &amp; M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingStartMonth__c</fullName>
        <description>SFDC1-7471 This field holds the Billing Start Month</description>
        <inlineHelpText>Please enter the Billing Start Month</inlineHelpText>
        <label>Billing Start Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStartYear__c</fullName>
        <description>SFDC1-7471 This field holds the Billing Start Year</description>
        <inlineHelpText>Please enter the Billing Start Year</inlineHelpText>
        <label>Billing Start Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCID__c</fullName>
        <description>SFDC1-4572: The field CCID holds value for Custom Collection ID</description>
        <inlineHelpText>Custom Collection ID</inlineHelpText>
        <label>CCID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCQuoteID__c</fullName>
        <description>SFDC1-4572: The field CCQuoteID holds value for Custom Collection Quote ID</description>
        <inlineHelpText>Custom Collection QuoteID</inlineHelpText>
        <label>CCQuoteID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>SFDC1-2298; Master-Detail relationship on Contract</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CurrentAnnualValue__c</fullName>
        <description>SFDC-1837 Current Annual Value field</description>
        <inlineHelpText>Current year value for contract line based upon installment year</inlineHelpText>
        <label>Current Annual Value</label>
        <summarizedField>ContractLineItemSchedule__c.SalesPrice__c</summarizedField>
        <summaryFilterItems>
            <field>ContractLineItemSchedule__c.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ContractLineItemSchedule__c.ContractLineItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>SFDC1-2298;The Description field for Contract Line Item</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <description>SFDC1-380 This field gets populated from Opportunity Line Item - Total Discount Value, when contract is created from wizard.SFDC1-4582 Changing the field name from Total Discount Value to Total Discount Amount. SFDC1-6501 - Label Update
SFDC1-10060 make this visible to users on page layout</description>
        <inlineHelpText>Total Discount Amount</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountType__c</fullName>
        <description>SFDC1-380 This field gets populated from Opportunity Line Item - Discount Type, when contract is created from wizard</description>
        <inlineHelpText>Discount Type</inlineHelpText>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Discount</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>SFDC1-2298; A percentage field</description>
        <label>Discount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>SFDC1-2298;</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstYear__c</fullName>
        <description>SFDC1-380 This field gets populated from Opportunity Line Item - First Year, when contract is created from wizard</description>
        <inlineHelpText>First Year</inlineHelpText>
        <label>First Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GoverningExhibit__c</fullName>
        <description>SFDC1-4688 : Mapping the value from Product field of the same name GoverningExhibit__c.
SFDC-1975</description>
        <formula>TEXT(AssociatedProduct__r.GoverningExhibit__c)</formula>
        <inlineHelpText>Captures the value from Governing Exhibit field on Product</inlineHelpText>
        <label>Governing Exhibit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceRemarks__c</fullName>
        <description>SFDC1-2252  This field will have information related to Invoice Remarks</description>
        <label>Invoice Remarks</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system id (unfriendly) referencing the source record and is populated via migrating system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LicenseNumber__c</fullName>
        <description>SFDC1-3835;Contract Line item level to put the license number - this is tightly integrated with SAP today.</description>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseType__c</fullName>
        <description>SFDC1-2252 This field will get its value from the same field on Opportunity Line item,SFDC1-6907 Updating picklist API name for &apos;Enterprise Wide License&apos; and &apos;One Time License&apos; by removing &apos;-&apos;.</description>
        <inlineHelpText>License Type</inlineHelpText>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer License</fullName>
                </value>
                <value>
                    <fullName>Departmental License</fullName>
                </value>
                <value>
                    <fullName>Divisional License</fullName>
                </value>
                <value>
                    <fullName>Enterprise Wide License</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>One Time License</fullName>
                </value>
                <value>
                    <fullName>Site License</fullName>
                </value>
                <value>
                    <fullName>Standalone License</fullName>
                </value>
                <value>
                    <fullName>User License</fullName>
                </value>
                <value>
                    <fullName>Client License</fullName>
                    <isActive>false</isActive>
                    <label>Client License</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LineItemNumber__c</fullName>
        <description>SFDC1-2298; Auto generate number for Contract Line Item</description>
        <displayFormat>{000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <description>SFDC1-2298; List price For Contract Line item</description>
        <label>Updated List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoadingGroup__c</fullName>
        <formula>AssociatedProduct__r.LoadingGroup__r.Name</formula>
        <label>Loading Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialCode__c</fullName>
        <description>SFDC1-6941 Material Code field on contract line item object</description>
        <inlineHelpText>Material Code</inlineHelpText>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MediaType__c</fullName>
        <description>SFDC1-2252 This field will get its value from the same field on Product Object</description>
        <label>Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinimumFeeValue__c</fullName>
        <description>SFDC-1784: Minimum Fee needed at Contract Line Item level</description>
        <inlineHelpText>Enter the annual minimum fixed fee value for this product.</inlineHelpText>
        <label>zzzMinimum Fixed Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Numconuser__c</fullName>
        <description>SFDC1-2252 This field will get its value from the same field on Opportunity Line item</description>
        <label>Number of Concurrent Users/Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numpotusers__c</fullName>
        <description>SFDC1-2252 This field will get its value from the same field on Opportunity Line item</description>
        <label>Number of Potential Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityProductId__c</fullName>
        <description>SFDC1-380 This field holds the value of Opportunity product Id - corresponding to ehich a contract  line item gets  created, when a contract is created form wizard</description>
        <inlineHelpText>Opportunity Product Id</inlineHelpText>
        <label>Opportunity Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherInformation__c</fullName>
        <description>SFDC1-2252 This field will have other information</description>
        <label>Other Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contract Line Item</label>
        <referenceTo>ContractLineItem__c</referenceTo>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PassThroughRoyaltyAnnualValue__c</fullName>
        <description>SFDC-3330: to indicate on the CLI that they are subject to subsidies, pass-through fess or royalties.</description>
        <label>Pass-through/Royalty Annual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearQuantity__c</fullName>
        <description>SFDC1-1048 New field Prior Year Quantity added to Contract Line Item</description>
        <label>Prior Year Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearTotalDiscountAmt__c</fullName>
        <description>SFDC1-1048 New field Prior Year Total Discount Amt added to Contracts</description>
        <label>Prior Year Total Discounted Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearTotalSalesPrice__c</fullName>
        <description>SFDC1-1048 New field Prior Year Total Sales Price added to Contracts</description>
        <label>Prior Year Total Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriorYearUnit__c</fullName>
        <description>SFDC1-1048 New field Prior Year Unit added to Contracts</description>
        <label>Prior Year Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProcessedContract__c</fullName>
        <description>SFDC1-7471 This field holds the Processed Contract Number</description>
        <formula>Contract__r.ProcessedContracttext__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is populated from the Contract</inlineHelpText>
        <label>Processed Contract #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <formula>AssociatedProduct__r.ProductGroup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2298;Product Lookup field on Contract Line Item
SFDC-99 Duplicate for AssociatedProduct__c marking this as zz to delete in future</description>
        <label>zzzProduct</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectedUnitPrice__c</fullName>
        <description>SFDC1-1048 New field Projected Unit Price added to Contracts</description>
        <label>Projected Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>SFDC1-2298</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecommendedUnitPrice__c</fullName>
        <description>SFDC1-1048 New field Recommended Unit Price added to Contracts</description>
        <label>Recommended Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RootContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2298; Look up field on Contract Line item</description>
        <label>Root Contract Line Item</label>
        <referenceTo>ContractLineItem__c</referenceTo>
        <relationshipLabel>Contract Line Items (Root Contract Line Item)</relationshipLabel>
        <relationshipName>RootContracLineItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAPLineItem__c</fullName>
        <description>SFDC1-5206 SAP Line Item field for Contract Line Item</description>
        <inlineHelpText>SAP Line Item</inlineHelpText>
        <label>SAP Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesPrice__c</fullName>
        <description>SFDC1-2298; Sales Price for Contract Line Item</description>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <description>SFDC1-2252 This field will get its value from the same field on Opportunity Line item</description>
        <label>Number of Locations/Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>SFDC1-2298; Start date for Contract Line item</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusIcon__c</fullName>
        <description>SFDC1-2298;</description>
        <label>StatusIcon</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFDC1-2298</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubsidyRoyaltyPassthroughPartner__c</fullName>
        <description>SFDC-3330: to indicate on the CLI that they are subject to subsidies, pass-through fess or royalties.</description>
        <label>Subsidy/Royalty/Passthrough Partner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chevron</fullName>
                </value>
                <value>
                    <fullName>Continental Stock Transfer</fullName>
                </value>
                <value>
                    <fullName>Factset</fullName>
                </value>
                <value>
                    <fullName>NYSE</fullName>
                </value>
                <value>
                    <fullName>S&amp;P Global</fullName>
                </value>
                <value>
                    <fullName>TSX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubsidyRoyaltyPassthroughType__c</fullName>
        <description>SFDC-3330: to indicate on CLI that they are subject to subsidies, pass-through fess or royalties.</description>
        <label>Subsidy/Royalty/Passthrough Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass-through</fullName>
                </value>
                <value>
                    <fullName>Royalty</fullName>
                </value>
                <value>
                    <fullName>Subsidy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalDiscountAmount__c</fullName>
        <description>SFDC1-380 This field gets populated from Opportunity Line Item - Total Discount Value, when contract is created from wizard.
SFDC1-4582 Changing the field name from Total Discount Value to Total Discount Amount
SFDC1-10060 update field label to Total Discount Amount</description>
        <inlineHelpText>Total Discount Amount</inlineHelpText>
        <label>Total Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPriceFromOpportunityLineItem__c</fullName>
        <description>SFDC1-380 This field gets populated from Opportunity Line Item - Total Price, when contract is created from wizard</description>
        <inlineHelpText>Total Price</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitListPriceNew__c</fullName>
        <description>SFDC1-5381: Adding the unit price which is missing in a contract line item for a product</description>
        <inlineHelpText>Unit Price</inlineHelpText>
        <label>Updated List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Line Item</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieldPropertyModification</fullName>
        <active>true</active>
        <description>SFDC1-4582 For Contract Type as Trial, Contract Start date and Invoice Remark fields are set as not editable</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.ContractLineItem__c ), False,AND( Contract__r.RecordType.Name == &quot;Trial&quot;,
OR(  ISCHANGED( InvoiceRemarks__c ),
     ISCHANGED( StartDate__c ) 
)))</errorConditionFormula>
        <errorMessage>Contract Start Date and Invoice Remark fields are non editable for Contract Record Type as Trial</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LockContractLineItemStartDate</fullName>
        <active>true</active>
        <description>SFDC1-6247:Contract Line Items StartDate is locked for editing if Status is &quot;Existing&quot;</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.ContractLineItem__c ), False,AND( IF( ISPICKVAL( Status__c , &quot;Existing&quot;) ,true, false) , 
ISCHANGED(StartDate__c)
))</errorConditionFormula>
        <errorMessage>StartDate is locked for editing as the Status is &quot;Existing&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductNameFieldCannotBeChanged</fullName>
        <active>true</active>
        <description>SFDC1-5759 Validation rule that prevents users from changing the product name field on contract line items</description>
        <errorConditionFormula>IF(OR($Setup.SystemMutedValidationRules__c.All__c, $Setup.SystemMutedValidationRules__c.ContractLineItem__c ), False,AND (
ISCHANGED(Name),
NOT(ISNEW())
))</errorConditionFormula>
        <errorMessage>Product Name cannot be changed after Contract Line Item is created.</errorMessage>
    </validationRules>
</CustomObject>